[project]
name = "mcp-apis"
version = "0.1.0"
description = ""
authors = [
    {name = "Sathvika",email = "sathvikak@rsnginfo.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "fastmcp (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
